// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<span
  class="components-truncate wp-components-truncate css-opvjha"
  data-g2-c16t="true"
  data-g2-component="Truncate"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render custom ellipsis 1`] = `
<span
  class="components-truncate wp-components-truncate css-opvjha"
  data-g2-c16t="true"
  data-g2-component="Truncate"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render custom ellipsizeMode 1`] = `
<span
  class="components-truncate wp-components-truncate css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="Truncate"
>
  So!!!r.
</span>
`;

exports[`props should render limit 1`] = `
<span
  class="components-truncate wp-components-truncate css-opvjha"
  data-g2-c16t="true"
  data-g2-component="Truncate"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render numberOfLines 1`] = `
<span
  class="components-truncate wp-components-truncate css-1nhmcmp"
  data-g2-c16t="true"
  data-g2-component="Truncate"
>
  Some people are worth melting for.
</span>
`;
